[package]
name = "q_rsqrt"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the fast inverse square root function from quake 3"
readme = "readme.md"
repository = "https://github.com/ThatNerdUKnow/Q_rsqrt"
keywords = ["math","quake3","qrsqrt"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
